--- a/styles/actualiter.css
+++ b/styles/actualiter.css
@@ -4,10 +4,13 @@
 
 }
 
-
+section{
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
+}
 
 section main{
-    background-color: chocolate;
+    background-color: gainsboro;
     display: flex;
     flex-direction: column;
     align-items: start;
@@ -37,7 +40,6 @@ section main{
 .actualiter-container{
     width: 100%;
     height: fit-content;
-    background-color: lightsalmon;
     display: flex;
     flex-direction: column;
     gap: 0.2em;
@@ -50,12 +52,26 @@ section main{
     display: none;
 }
 .actualiter-container .content{
-    background-color: lightgray;
+    background-color: grey;
     padding-left: 1em;
-    border-left: 5px solid lightskyblue;
     font-size: 0.7em;
+    display: flex;
+    align-items: center;
+    justify-content: start;
 }
 
+
+
+
+.actualiter-container .content a{
+    color: black;
+    text-decoration: none;
+}
+
+.actualiter-container .content p{
+    border-left: 5px solid lightseagreen;
+    padding-left: 1em;
+}
 
 
 
