--- a/styles/espace-e.css
+++ b/styles/espace-e.css
@@ -8,6 +8,8 @@
     flex-direction: column;
     align-items: start;
     justify-content:center ;
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
 }
 
 #espace-title{
