--- a/styles/body.css
+++ b/styles/body.css
@@ -30,3 +30,43 @@ body{
     }
     
 }
+
+
+
+#social-media{
+    position: fixed;
+    left: -3.3em;
+    bottom: 50vh;
+    display: flex;
+    flex-direction: column;
+    backdrop-filter: blur(10px);
+    z-index: 99999;
+    padding: 0.3em;
+    padding-right: 1em;
+    align-items: center;
+    justify-content: center;
+    gap: 0.2em;
+    border-radius: 0.5em;
+    transition: transform 0.5s ease-out ;
+}
+
+
+#social-media i{
+    font-size: 2.5em;
+} 
+
+.fa-facebook{
+    color: blue;
+}
+.fa-youtube{
+    color: red;
+}
+.fa-instagram{
+    color: orange;
+}
+.fa-linkedin{
+    color: rgb(97, 97, 255);
+}
+
+
+
