--- a/styles/actualiter.css
+++ b/styles/actualiter.css
@@ -7,6 +7,10 @@
 section{
     margin-top: 0.5em;
     margin-bottom: 0.5em;
+    display: flex;
+    flex-direction: column;
+    gap: 0.2em;
+
 }
 
 section main{
@@ -19,20 +23,23 @@ section main{
 }
 
 #actualiter-titles{
-    background-color: black;
+    background-color: white;
     width: 100%;
     display: flex;
-    gap: 0.2em;
+    gap: 0.1em;
 }
 
 #actualiter-titles .title{
-    background-color: blue;
+    background-color: rgb(0, 0, 0);
     color: aliceblue;
     border: none;
-    padding: 0.2em;
-    height: 4em;
-    width: 30%;
+    padding-right: 1em;
+    padding-top: 0.8em;
+    padding-bottom: 0.8em;
+    padding-left: 0.5em;
+    width: fit-content;
     margin: 0;
+    font-weight: 700;
 }
 
 
@@ -58,7 +65,10 @@ section main{
     display: flex;
     align-items: center;
     justify-content: start;
+    padding-top: 0.5em;
+    padding-bottom: 0.5em;
 }
+
 
 
 
@@ -66,11 +76,9 @@ section main{
 .actualiter-container .content a{
     color: black;
     text-decoration: none;
-}
-
-.actualiter-container .content p{
     border-left: 5px solid lightseagreen;
     padding-left: 1em;
+    font-weight: 400;
 }
 
 
@@ -78,7 +86,7 @@ section main{
 /*events*/
 
 section aside{
-    background-color: slateblue;
+    background-color: rgb(159, 159, 159);
     display: flex;
     flex-direction: column;
     align-items: start;
@@ -96,7 +104,8 @@ section aside{
     width: 100%;
     display: flex;
     align-items: center;
-    justify-content: center;    
+    justify-content: center;  
+
 }
 
 section aside .content a{
@@ -105,7 +114,7 @@ section aside .content a{
 }
 
 section aside .content{
-    background-color: darkgray;
+    background-color: rgb(77, 148, 255);
     width: fit-content;
     height: fit-content;
     border-radius: 1em;
@@ -117,6 +126,7 @@ section aside .content{
     font-weight: 450;
     font-size: 1.1em;
     font-family: poppins,sans-serif;
+    margin-left: 0.2em;
 }
 
 section aside .content .date{
