--- a/styles/espace-e.css
+++ b/styles/espace-e.css
@@ -3,7 +3,7 @@
     padding: 0;
 }
 #espace-etudiant{
-    background-color: ghostwhite;
+    background-color: gray;
     display: flex;
     flex-direction: column;
     align-items: start;
@@ -13,9 +13,11 @@
 }
 
 #espace-title{
-    background-color: gray;
+    background-color: rgb(0, 0, 0);
+    color: aliceblue;
     width: 100%;
     font-size: 2em;
+    font-weight: 500;
 }
 
 #espace-e-container{
@@ -33,8 +35,52 @@
     height: 6em;
     margin: 0.1em;
     border-radius: 1em;
+    overflow: hidden;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 #espace-e-container .content img{
-    height: 100%;
+    height: 90%;
+    width: 90%;
 }
+
+#espace-e-container #mtu{
+    background-image: url(../to-study-4857779.jpg);
+    background-position: center;
+    background-size: cover;
+}
+
+#espace-e-container #time{
+    background-image: url(../calendare.jpg);
+    background-position: center;
+    background-size: cover;
+}
+
+#espace-e-container #moodle{
+    background-image: url(../students.jpg);
+    background-position: center;
+    background-size: cover;
+}
+
+#espace-e-container #roseta{
+    background-image: url(../languages.jpg);
+    background-position: center;
+    background-size: cover;
+}
+
+#espace-e-container #gmail{
+    background-image: url(../Gmail_Logo_512px.png);
+    background-position: center;
+    background-size: cover;
+}
+
+
+#espace-e-container #concours{
+    background-image: url(../concours-img.jpg);
+    background-position: center;
+    background-size: cover;
+}
+
 
